--- a/styles/architect.css
+++ b/styles/architect.css
@@ -8,3 +8,62 @@
   font-weight: 400;
   font-style: normal;
 }
+.bg-light{
+    background-color:rgba(255, 144, 14, 0.1)
+}
+.display-flex{
+    display: flex;
+}
+.navbar{
+    justify-content: space-between;
+    align-items: center;
+}
+.brand{
+    font-weight: 700;
+    font-size: 3rem;
+}
+.nav-item{
+    list-style: none;
+    margin-right: 30px;
+}
+.nav-link{
+    text-decoration: none;
+    font-weight: 500;
+}
+.text-gray{
+    color: #424242;
+}
+.text-light-gray{
+    color:
+}
+.btn-primary{
+    background-color: rgba(255, 144, 14, 1);
+    color: white;
+    padding: 20px 25px;
+    border-radius:8px;
+    font-size: 1.25rem;
+    font-weight: 600px;
+    border: none;
+}
+.navbar, .banner{
+    max-width: 1440px;
+    margin: 0 auto;
+}
+.banner-contant{
+    max-width:850px;
+    margin: 0 auto;
+    text-align: center;
+    margin-bottom: 50px;
+}
+.banner-title{
+    font-weight: 700;
+    font-size: 4rem;
+}
+.banner-image{
+    width: 100%;
+}
+@media screen and (max-width: 576px){
+    .navbar, .nav-link{
+        flex-direction: column;
+    }
+}
