--- a/styles/architect.css
+++ b/styles/architect.css
@@ -57,14 +57,14 @@ main>section{
 }
 .our-features{
     margin-left: 130px;
-    max-width: 530px;
+    max-width: 1440px;
 }
 .navbar, .banner{
     max-width: 1440px;
     margin: 0 auto;
 }
 .banner-content{
-    max-width:850px;
+    max-width:1440px;
     margin: 0 auto;
     text-align: center;
     margin-bottom: 50px;
@@ -78,6 +78,7 @@ main>section{
 }
 .teams{
     align-items: center;
+    margin-top: 85px;
 }
 .team-image-container{
     display: grid;
@@ -91,6 +92,88 @@ main>section{
 #quick-list{
     font-weight: 500;
 }
+.facts-container{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    margin-top: 60px;
+}
+.fact-card{
+    border: 1px solid rgba(255, 144, 14, 1);
+    width: 240px;
+    height: 240px;
+   
+    border-radius: 8px;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+}
+.fact-name{
+    font-size: 1.25rem;
+    font-weight: 600;
+    margin-top: 10px;
+}
+/* .fact-card{
+     gap: 20px;
+} */
+.fact-number{
+    font-size: 2.5rem;
+    font-weight: 600;
+    margin-top: 5px;
+    margin-bottom: 10px;
+}
+.fact-description{
+    max-width: 1440px;
+}
+.sponsor-info{
+    max-width:1440px;
+    margin: 50px auto;
+    text-align: center;
+}
+.sponsor-company{
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    gap: 50px;
+    align-items: center;
+    justify-items: center;
+    box-shadow: 4px 4px 10px x-offset;
+}
+.sponsor-company img{
+    width: 100%;
+    max-width: 1440px;
+    margin-top: 50px;
+    margin-left: 30px;
+
+}
+.footer-area{
+    max-width: 1440px;
+    margin-top: 130px;
+    padding: 39px 410px 38px 410px;
+    background-color: rgba(255, 244, 231, 1);
+    text-align: center;
+}
+.footer-content{
+    color:rgba(66, 66, 66, 1);
+}
+#feature-section-title{
+    border-left: 5px solid red;
+    padding-left: 21px;
+}
+.features{
+    gap: 20px;
+}
+.features-card{
+    padding: 30px;
+    border-radius: 8px;
+    box-shadow: 0 4px 30px 0  rgba(0, 0, 0, 0.06);
+    margin-bottom: 20px;
+}
+.feature-card, .feature-title{
+    font-weight: 600;
+    font-size: 1.25rem;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    
+}
 /* smaller device */
 @media screen and (max-width: 576px){
     .navbar, 
@@ -98,8 +181,16 @@ main>section{
     .teams{
         flex-direction: column;
     }
-    .team-image-container{
-        grid-template-columns: repeat(1, 1fr);
+    .team-image-container, .facts-container{
+        grid-template-columns: 1fr;
+    }
+    .facts-container{
+        justify-items: center;
+    }
+    .sponsor-company{
+        grid-template-columns: repeat(2, 1fr);
+        gap:50px;
+        justify-items: center;
     }
     .our-features{
         margin-left: 20px;
