--- a/styles/architect.css
+++ b/styles/architect.css
@@ -174,10 +174,31 @@ main>section{
     margin-bottom: 0px;
     
 }
+.featured-architect img{
+    width: 100%;
+}
+#experience-badge{
+    padding: 45px 42px;
+    font-size: 1.5rem;
+    font-weight: 500;
+    margin-left: -100px;
+    margin-top: -100px;
+}
+#experience-year{
+    font-size: 4rem;
+    font-weight: 700;
+}
+#experience-badge{
+    margin-top: 20px;
+    margin-left: 20px;
+
+}
 /* smaller device */
 @media screen and (max-width: 576px){
     .navbar, 
-    .nav-link, 
+    .nav-link,
+    .features,
+    .featured-architect,
     .teams{
         flex-direction: column;
     }
@@ -204,4 +225,9 @@ main>section{
     .our-features{
         margin-left: 50px;
     }
+    #experience-badge{
+    margin-top: 20px;
+    margin-left: 20px;
+    
+}
 }
